--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,6 @@ pages:
    - Installation: "installation/index.md"
    - Configuration: "configuration/index.md"
    - Use Cases: "use-cases/index.md"
-- About:
-  - Release Notes: "about/release-notes.md"
-  - License: "about/license.md"
+- About: "about/index.md"  
 theme: readthedocs
 #site_dir: ../../hawk-docs/hawk
